...
              },
              child: BlocBuilder<AudioPlayerBloc, AudioPlayerState>(
                builder: (context, state) {
                  return Align(
                    alignment: Alignment.bottomCenter,
                    child: AnimatedContainer(
                      key: const Key('audio_player_container'),
                      duration: Duration(milliseconds: 300),
                      width: MediaQuery.sizeOf(context).width,
                      height: [AudioPlayerStatus.initial, AudioPlayerStatus.loading].contains(state.status) ? 230 : 368,
                      decoration: BoxDecoration(
                        color: Color(0xBF313131),
                        borderRadius: BorderRadius.only(
...
                              children: [
                                // Song Title
                                Shimmer.fromColors(
                                  baseColor: Colors.grey.shade300,
                                  highlightColor: Colors.grey.shade600,
                                  child: Text(
                                    "Loading...",
                                    style: TextStyle(
                                      fontFamily: 'Roboto',
                                      fontWeight: FontWeight.w600,
                                      fontSize: 34,
                                      height: 1.12,
                                      // Line Height 38px / Font Size 34px = 1.12
...
