...
            builder: (context, child) {
              double width = widget.progress > 0 ? (widget.progress == 1 ? 300 : 90 + (widget.progress * 185)) : 0;

              return Align(
                alignment: Alignment.centerLeft,
                child: Container(
                  key: Key("progressBar"),
                  height: 120,
                  color: const Color(0xFFE6E6FF),
                  width: width *
                      (widget.currentStatus == VisualizerStatus.playing && widget.progress < 0.02
                          ? _progressAnimation.value
                          : 1),
...
